agregar campos
