# storage/api-docs/api-docs.json
@@ -68,6 +68,69 @@
                 "summary": "Lists available Users",
                 "description": "Gets all available Users resources",
                 "operationId": "App\\Http\\Controllers\\UsersController::index",
+                "parameters": [
+                    {
+                        "name": "paginate",
+                        "in": "query",
+                        "description": "paginate",
+                        "required": false,
+                        "allowEmptyValue": true,
+                        "schema": {
+                            "title": "Paginate",
+                            "description": "The unique identifier of a Post resource",
+                            "type": "boolean",
+                            "example": "true"
+                        }
+                    },
+                    {
+                        "name": "dataSearch",
+                        "in": "query",
+                        "description": "Post resource name",
+                        "required": false,
+                        "allowEmptyValue": true,
+                        "schema": {
+                            "description": "The unique identifier of a Post resource",
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "sortField",
+                        "in": "query",
+                        "description": "Sort field",
+                        "required": false,
+                        "allowEmptyValue": true,
+                        "schema": {
+                            "title": "name",
+                            "description": "The unique identifier of a Post resource",
+                            "type": "string",
+                            "example": "name"
+                        }
+                    },
+                    {
+                        "name": "sortOrder",
+                        "in": "query",
+                        "description": "Sort order field",
+                        "allowEmptyValue": true,
+                        "schema": {
+                            "title": "sortOrder",
+                            "description": "The unique identifier of a Post resource",
+                            "type": "string",
+                            "example": "asc"
+                        }
+                    },
+                    {
+                        "name": "perPage",
+                        "in": "query",
+                        "description": "Sort order field",
+                        "allowEmptyValue": true,
+                        "schema": {
+                            "title": "perPage",
+                            "description": "The unique identifier of a Post resource",
+                            "type": "number",
+                            "default": "0"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "A list with Users",
